Clear |displayed_content_with_cert_errors_| on navigation

I added this flag with the new plumbing for subresources with cert
errors in https://crbug.com/634171, but neglected to clear it on
navigation.

BUG=641180

Review-Url: https://codereview.chromium.org/2280753003
Cr-Commit-Position: refs/heads/master@{#415345}

Former-commit-id: 73583c0beffde96c6797a59fd7f3576ab5f39230